fixed horizontal scroll bar

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ body {
 
 .banner-container {
     height: 100vh;
-    width: 100vw;
+    /* width: 100vw; */
     background: rgba(229, 84, 115, 0.2);
     /* background-position: right bottom;
     background-repeat: no-repeat;
